# roake_param_identify

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  trainingSet_ly.txt
example/: CMakeLists.txt
example/cpp/: move_example.cpp  path_record.cpp  print_helper.hpp  read_robot_state.cpp  sdk_example.cpp
example/cpp/ly/: CIC.cpp  CIC_test.cpp  CMakeLists.txt  Construct_trainingSet.py  Construct_trainingSet1.py  Construct_trainingSet_sparse.py  GP_SCGP.py  GP_SGPR.py  GP_fitting.py  GP_fitting1.py  GP_fitting1_sparse.py  GP_fitting2.py  GP_fitting2_sparse.py  PD.cpp  PD1.cpp  PD_plot.py  PD_plot1.py  PD_plot1_copy.py  PD_plot_copy.py  PD_show.cpp  PD_testSet.cpp  SCGP_cartesian.cpp  SCGP_joint.cpp  SGPR_cartesian.cpp  SGPR_joint.cpp  SGPR_robot.cpp  SGPR_robot1.cpp  SGPR_robot1_sparse.cpp  SGPR_robot_copy.cpp  Y.txt  compare.py  compare1.py  compare1_copy.py  compare_copy.py  compare_plot.py  construct_trainingset_cartesian.py  construct_trainingset_joint.py  de-noise.cpp  de_noise.py  ly.cpp  (+14 more)
example/cpp/ly/compare_SCGP_SGPR/cartesian/data_PD/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/cartesian/data_SCGP/s1/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/cartesian/data_SCGP/s2/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/cartesian/data_SCGP/s3/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/cartesian/data_SCGP/s4/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/cartesian/data_SGPR/s1/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/cartesian/data_SGPR/s2/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/cartesian/data_SGPR/s3/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/cartesian/data_SGPR/s4/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/cartesian/data_SGPR/s5/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/cartesian/data_collect/: torque.txt
example/cpp/ly/compare_SCGP_SGPR/joint/data_PD/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/joint/data_SCGP/s1/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/joint/data_SCGP/s2/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/joint/data_SCGP/s3/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/joint/data_SCGP/s4/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/joint/data_SGPR/s1/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/joint/data_SGPR/s2/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/joint/data_SGPR/s3/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/joint/data_SGPR/s4/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  trainingset.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/joint/data_SGPR/s5/: coriolis.txt  gravity.txt  inertia.txt  position.txt  position_error.txt  torque.txt  velocity.txt
example/cpp/ly/compare_SCGP_SGPR/joint/data_collect/: gravity.txt  position.txt
example/cpp/ly/simulation/: run_algorithm.py  test2.py  test_OneStep_Impedance_Cons.py
example/cpp/ly/simulation/algorithm/: OneStep_Impedance_Cons.py  QP2PVC.py  test.py
example/cpp/ly/simulation/env/: PolishWithFraction.py  test.py
example/cpp/ly/simulation/exp_data/矩形/IC/: collected_dataSet.txt  plot.py
example/cpp/ly/simulation/exp_data/矩形/IC_contact/: collected_dataSet.txt  plot.py
example/cpp/ly/simulation/exp_data/矩形/IPC/0.38/: plot.py  (+2 more)
example/cpp/ly/simulation/exp_data/螺旋/IC/: collected_dataSet.txt  plot.py
example/cpp/ly/simulation/exp_data/螺旋/IPC/: D_trajectory.txt  collected_dataSet.txt  plot.py
example/cpp/ly/simulation/figs/: RectIC.eps  RectIC_contact.eps  RectIPC40.eps  RectIPC_contact1.eps  RectIPC_contact2.eps  SpiralIPC.eps
example/cpp/rt/: CMakeLists.txt  accelation_ly.txt  cartesian_impedance_control.cpp  cartesian_s_line.cpp  follow_joint_position.cpp  gravity_ly.txt  joint_impedance_control.cpp  joint_position_control.cpp  joint_s_line.cpp  jp_ly.txt  jv_ly.txt  move_commands.cpp  param_identify.cpp  position_ly.txt  roake_param_identify.cpp  tau_ly.txt  test_GP.cpp  test_collect.cpp  test_torque.cpp  torque_control.cpp  torque_ly.txt  velocity_ly.txt
example/cpp/xdz/: CMakeLists.txt  call_python.cpp  cart_control.cpp  cart_position_control.cpp  drag.cpp  force_collect.cpp  force_control.cpp  return_drag.cpp  robotiq copy.cpp  robotiq.cpp
example/cpp/ys/: CMakeLists.txt
lib/: CMakeLists.txt
lib/Linux/cpp/x86_64/: libxCoreSDK.so.0.3.3
lib/Linux/cpp/x86_64/NoModel/: libxCoreSDK.so.0.3.3
(+23 files in other folders)
